--- a/论文模板.master
+++ b/论文模板.master
@@ -4,8 +4,8 @@
 
 <head runat="server">
 <meta http-equiv="Content-Language" content="zh-cn" />
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-<title>论文模板</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>锟斤拷锟斤拷模锟斤拷</title>
 <asp:ContentPlaceHolder id="head" runat="server">
 </asp:ContentPlaceHolder>
 <style type="text/css">
@@ -20,7 +20,7 @@
 }
 .style5 {
 	font-size: xx-large;
-	font-family: 黑体;
+	font-family: 锟斤拷锟斤拷;
 	color: #FFFFFF;
 }
 </style>
@@ -32,8 +32,8 @@
 	<tr>
 		<td>
 		<div style="position: absolute; width: 68px; height: 70px; z-index: 1; left: 228px; top: 47px" id="layer1" class="style5">
-			正君<br />
-			之教</div>
+			锟斤拷锟斤拷<br />
+			之锟斤拷</div>
 		<img src="sun.jpg" width="888" height="125" /></td>
 	</tr>
 	<tr>
@@ -47,7 +47,7 @@
 		</td>
 	</tr>
 	<tr>
-		<td class="style4">个人观点，欢迎斧正<br />
+		<td class="style4">锟斤拷锟剿观点，锟斤拷迎锟斤拷锟斤拷<br />
 		zjchen@shenzhong.net</td>
 	</tr>
 </table>
